# Notero

./: .dockerignore  .env.example  .gitignore  DEPLOY-SINGLE-USER.md  Dockerfile  README.md  SESSION_STATE.md  config.yaml  deploy_flyio.bat  fly.toml  package.json  pyproject.toml  railway.json  requirements.txt  vercel.json
api/: index.py
data/facts/: nb-2026-001.json  nb-2026-002.json
data/rss_cache/: rss_0a746bc8c9f958dda729f899013a.json  rss_0b6bebc1b70cf99dd27c4b05be95.json  rss_1915ef7ebb4480594af49f36a106.json  rss_2168c4eef6f7cc83e82c11d7b3cf.json  rss_3941bf69b62d63653ffcc0e5a70c.json  rss_3a5b2c5ecccdb191703b880d2ff4.json  rss_50505de1eaf4df462cc43cd7a7ae.json  rss_72c0a14877428c282baf21d92adb.json  rss_76b247e94be8237c94d2d2388c7d.json  rss_97796d4874562a6b6e3668fb4b5b.json  rss_a427bbdfb5213c879374f0c7a3ea.json  rss_afb4e5863fbd2694eea993ba98da.json  rss_b341cb13b65586fa16484329a39b.json  rss_c648c2fb99e71ecb1be614d4f530.json  rss_c82b8a520d9eb5a6e95f31bf3def.json  rss_d1a3446280f8d3553903e7118d13.json  rss_d5e9f16c71b836be45641ae27468.json  rss_e122611b5bc522f27481a84016bc.json  rss_e8daffe8f552af1d495b244bb936.json  rss_f6393833b23a76f2193a474c8807.json  rss_feb8af79ae5cf1fb663428cc4ba9.json
nexaa/: __init__.py  cli.py
nexaa/editorial/: core.py  formats.py  style.py
nexaa/engine/: approval.py  engine.py
nexaa/providers/: base.py  claude_provider.py  gemini_provider.py  groq_provider.py  local_template.py  mistral_provider.py  openai_provider.py  registry.py  (+1 more)
tests/: conftest.py  test_basic.py  test_formats.py  test_scraper.py  test_web.py
(+16 files in other folders)
