[project]
name = "nexaa-ai-editor"
version = "0.1.0"
description = "Editor de noticias con IA para Nexaa"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "trafilatura>=2.0",
    "lxml>=5.0",
    "pydantic>=2.0",
]

[tool.vercel]
entrypoint = "api.index:app"
